Move comments form above comments list.

--- a/single.html
+++ b/single.html
@@ -119,44 +119,16 @@
               </ul>
             </div>
 
-            <div class="comments mt-4" id="comments_container">
-              <div class="card bg-light mb-3 comment">
-                <h5 class="card-header">
-                  <span class="row">
-                  <span class="col-md-6 text-dark avatar">
-                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
-                  </span>
-                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
-                  </span>
-                </h5>
-                <div class="card-body bg-white p-2">
-                  <p>Mountains, she had a last view back</p>
-                </div>
-              </div>
-              <div class="card bg-light mb-3 comment">
-                <h5 class="card-header">
-                  <span class="row">
-                  <span class="col-md-6 text-dark avatar">
-                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
-                  </span>
-                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
-                  </span>
-                </h5>
-                <div class="card-body bg-white p-2">
-                  <p>Mountains, she had a last view back</p>
-                </div>
-              </div>
-            </div>
             <div class="comment-form-wrapper">
               <h3 class="comment-form-title">Leave a comment</h3>
               <form action="#" id="commentForm" class="comment-form" method="post" accept-charset="utf-8" novalidate="novalidate">
                 <div class="form-group">
                   <input type="text" name="name" id="name" class="form-control" placeholder="Name" data-rule-required="true">
                 </div>
-                <div class="form-group ">
+                <div class="form-group">
                   <input type="email" name="email" id="email" class="form-control" placeholder="Email" data-rule-required="true">
                 </div>
-                <div class="form-group ">
+                <div class="form-group">
                   <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Comment" data-rule-required="true"></textarea>
                 </div>
                 <div class="form-group">
@@ -164,10 +136,39 @@
                 </div>
               </form>
             </div>
+
+            <div class="comments mt-4" id="comments_container">
+              <div class="card bg-light comment">
+                <h5 class="card-header">
+                  <span class="row">
+                  <span class="col-md-6 text-dark avatar">
+                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
+                  </span>
+                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  </span>
+                </h5>
+                <div class="card-body bg-white p-2">
+                  <p>Mountains, she had a last view back</p>
+                </div>
+              </div>
+              <div class="card bg-light comment">
+                <h5 class="card-header">
+                  <span class="row">
+                  <span class="col-md-6 text-dark avatar">
+                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
+                  </span>
+                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  </span>
+                </h5>
+                <div class="card-body bg-white p-2">
+                  <p>Mountains, she had a last view back</p>
+                </div>
+              </div>
+            </div>
           </main>
         </div>
         <div class="col-xs-12 col-sm-5 col-lg-4 col-xl-3">
-          <aside class="sidebar mb-3">
+          <aside class="sidebar">
             
             <div class="newsletter">
               <h3>Subscribe to our newsletter</h3>
