--- a/single.html
+++ b/single.html
@@ -168,7 +168,7 @@
           </main>
         </div>
         <div class="col-xs-12 col-sm-5 col-lg-4 col-xl-3">
-          <aside class="sidebar">
+          <aside class="sidebar mb-2">
             
             <div class="newsletter">
               <h3>Subscribe to our newsletter</h3>
