Remove useless id from HTML element

--- a/single.html
+++ b/single.html
@@ -137,7 +137,7 @@
               </form>
             </div>
 
-            <div class="comments mt-4" id="comments_container">
+            <div class="comments mt-4">
               <div class="card bg-light comment">
                 <h5 class="card-header">
                   <span class="row">
