--- a/single.html
+++ b/single.html
@@ -151,6 +151,35 @@
                   <p>Mountains, she had a last view back</p>
                 </div>
               </div>
+              <div class="replies ps-4 mb-3">
+                <div class="card bg-light comment">
+                  <h5 class="card-header">
+                    <span class="row">
+                    <span class="col-md-6 text-dark avatar">
+                      <img src="assets/images/john.jpg" alt="John" class="rounded-circle">John Doe says:
+                    </span>
+                    <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                    </span>
+                  </h5>
+                  <div class="card-body bg-white p-2">
+                    <p>Mountains, she had a last view back</p>
+                  </div>
+                </div>
+
+                <div class="card bg-light comment">
+                  <h5 class="card-header">
+                    <span class="row">
+                    <span class="col-md-6 text-dark avatar">
+                      <img src="assets/images/carmen.jpg" alt="Carmen" class="rounded-circle">Carmen Smith says:
+                    </span>
+                    <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                    </span>
+                  </h5>
+                  <div class="card-body bg-white p-2">
+                    <p>Mountains, she had a last view back</p>
+                  </div>
+                </div>
+              </div>
               <div class="card bg-light comment">
                 <h5 class="card-header">
                   <span class="row">
