--- a/category.html
+++ b/category.html
@@ -53,12 +53,12 @@
           <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 pl-md-1 text-nowrap">
            <li class="nav-item">
             <a href="#" class="btn btn-sm btn-success">
-              <i class="fa-solid fa-right-to-bracket"></i> Login
+              <i class="fa-solid fa-right-to-bracket pe-1"></i> Login
             </a>
            </li>
            <li class="nav-item">
             <a href="#" class="btn btn-sm btn-success">
-              <i class="fa-solid fa-user-plus"></i> Register
+              <i class="fa-solid fa-user-plus pe-1"></i> Register
             </a>
            </li>
           </ul>
