Add actions (Edit, Delete and Reply) to comments

--- a/single.html
+++ b/single.html
@@ -148,7 +148,18 @@
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
-                  <p>Mountains, she had a last view back</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel diam vulputate, ornare justo vel, rutrum eros. Nam mollis iaculis lacus sit amet ornare. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus imperdiet neque et urna viverra placerat. Nulla facilisi.</p>
+                  <ul class="comment-actions list-unstyled">
+                    <li>
+                      <a href="#"><i class="fa-regular fa-pen-to-square"></i> Edit</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fa-solid fa-trash"></i> Delete</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fa-regular fa-comments"></i> Reply</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="replies ps-4 mb-3">
@@ -191,6 +202,17 @@
                 </h5>
                 <div class="card-body bg-white p-2">
                   <p>Mountains, she had a last view back</p>
+                  <ul class="comment-actions list-unstyled">
+                    <li>
+                      <a href="#"><i class="fa-regular fa-pen-to-square"></i> Edit</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fa-solid fa-trash"></i> Delete</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fa-regular fa-comments"></i> Reply</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
