Add a  tag cloud to below the article

--- a/single.html
+++ b/single.html
@@ -96,6 +96,14 @@
               <p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
             </div>
 
+            <div class="tag-cloud">
+              <span>Lorem ipsum</span>
+              <span>Repellat</span>
+              <span>Doloribus</span>
+              <span>Fugit</span>
+              <span>Laudantium</span>
+            </div>     
+
             <div class="social-container"> 
               <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
                 <li class="me-1">
