Replace <span> with <a> in the tag cloud

--- a/single.html
+++ b/single.html
@@ -97,12 +97,12 @@
             </div>
 
             <div class="tag-cloud">
-              <span>Lorem ipsum</span>
-              <span>Repellat</span>
-              <span>Doloribus</span>
-              <span>Fugit</span>
-              <span>Laudantium</span>
-            </div>     
+              <a href="#">Lorem ipsum</a>
+              <a href="#">Repellat</a>
+              <a href="#">Doloribus</a>
+              <a href="#">Fugit</a>
+              <a href="#">Laudantium</a>
+            </div>   
 
             <div class="social-container"> 
               <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
