Show comments count as tooltip

--- a/single.html
+++ b/single.html
@@ -83,7 +83,7 @@
                 <span class="date">Nov 19, 2022</span>
               </div>
               <div class="right-half col-sm-12 col-sm-5 col-lg-4">
-                <a class="comments" id="comments_status" href="#comments_container" title=" "><i class="fa fa-comments mr-1"></i> 4 comments</a> <strong>·</strong>
+                <a class="comments" id="comments_status" href="#comments_container" title="4 comments"><i class="fa fa-comments mr-1"></i> 4 comments</a> <strong>·</strong>
                 <a href="#" id="print_btn" onclick="printJS({ printable: 'article-content', type: 'html', css: ['./assets/css/style.css', './assets/css/print.css'] })"><i class="fa fa-print"></i> Print</a>
               </div>
             </div>
