Add a (single) video page.

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
               <p class="text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
             <div class="read-more">
-              <a class="btn btn-sm btn-success w-100" href="single.html">Read more</a>
+              <a href="single.html" class="btn btn-sm btn-success w-100">Read more</a>
             </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="article">
             <div class="thumbnail">
-              <a href="#">
-                <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              <a href="video.html">
+                <img src="assets/images/castle.jpg" alt="A beautiful castle">
               </a>
             </div>
             <div class="text">
@@ -101,12 +101,12 @@
                 <a href="#">Travel</a>
               </p>
               <h2 class="card-title">
-                <a href="#">Europe's most beautiful castles</a>
+                <a href="video.html">A beautiful castle</a>
               </h2>
               <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
             </div>
             <div class="read-more">
-              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+              <a href="video.html" class="btn btn-sm btn-success w-100">Read more</a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
           <div class="article">
             <div class="thumbnail">
               <a href="#">
-              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+                <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
               </a>
             </div>
             <div class="text">
