--- a/single.html
+++ b/single.html
@@ -132,7 +132,7 @@
               </ul>
             </div>
 
-            <div class="comment-form-wrapper">
+            <div class="comment-form-wrapper" id="comments_container">
               <h3 class="comment-form-title">Leave a comment</h3>
               <form action="#" id="commentForm" class="comment-form" method="post" accept-charset="utf-8" novalidate="novalidate">
                 <div class="form-group">
